// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should display emoji rightly 1`] = `
<div>
  <div
    class="container small"
  >
    <div
      class="card frontface"
      data-testid="card"
    >
       
      ☕
    </div>
    <div
      class="owner"
    />
  </div>
</div>
`;

exports[`Card should display number rightly 1`] = `
<div>
  <div
    class="container small"
  >
    <div
      class="card frontface"
      data-testid="card"
    >
       
      5
    </div>
    <div
      class="owner"
    />
  </div>
</div>
`;

exports[`Card should display string rightly 1`] = `
<div>
  <div
    class="container small"
  >
    <div
      class="card frontface"
      data-testid="card"
    >
       
      ?
    </div>
    <div
      class="owner"
    />
  </div>
</div>
`;

exports[`Card should render back of the card 1`] = `
<div>
  <div
    class="container small"
  >
    <div
      class="card backface"
      data-testid="card"
    >
       
    </div>
    <div
      class="owner"
    />
  </div>
</div>
`;

exports[`Card should render the card 1`] = `
<div>
  <div
    class="container small"
  >
    <div
      class="card frontface"
      data-testid="card"
    >
       
      0
    </div>
    <div
      class="owner"
    />
  </div>
</div>
`;
